[package]
name = "tp1_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
pcap = "2.4.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
csv = "1.4.0"

[lib]
name = "tp1_rust"
path = "src/lib.rs"

[[bin]]
name = "tp1_rust"
path = "src/main.rs"